# ObjectExternal/pizzeria-resources/SCRIPT.js
@@ -7,7 +7,13 @@ if (typeof pizzeria === "undefined") pizzeria = (function($) {
 		piz.toFixed = function() { return function(n, r) { return parseFloat(r(n)).toFixed(2); } }; // Mustache rendering for decimal
 		piz.bannerURL = banner;
 		piz.search(function() {
-			$("#pizzeria").html(Mustache.render($("#pizzeria-template").html(), piz));
+			$("#pizzeria").html(Mustache.render($("#pizzeria-template").html(), piz)).find("img").click(function() {
+				var item = piz.getItem($(this).data("id")); // Get list item from row ID
+				if (item.pzaPizVideo) {
+					var video = $("<iframe/>", { width: 560, height: 315, src: item.pzaPizVideo, frameborder: "0", allow: "autoplay; encrypted-media", allowfullscreen: true });
+					bootbox.alert({ title: item.pzaPizName, message: video });
+				}
+			});
 		}, {}, { inlineDocs: true });
 	}
 
